--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,10 @@ input {
   margin: 5px;
 }
 
+#selectBoard {
+  max-width: 30vw;
+}
+
 .trash {
   background-color: lightcoral;
   background-image: url(./trashcan.svg);
@@ -108,6 +112,7 @@ input {
 
 .boardTitle {
   margin: 5px 35px 0px 35px;
+  word-break: break-word;
 }
 
 .boardCounter {
@@ -294,14 +299,13 @@ input {
   top: 0px;
   right: 0px;
   height: 100vh;
+  max-width: 100vw;
   z-index: 3;
 
-  transform: translateX(420px);
   transition: transform 0.4s ease;
 }
 
 .colorPickerMenuLeft {
-  position: relative;
   padding-top: 10px;
 }
 
@@ -319,15 +323,15 @@ input {
 
 .closeColorPicker {
   position: absolute;
-  bottom: 10px;
-  right: 0;
+  top: 5px;
+  right: 5px;
 }
 
 .openedColorPicker {
-  transform: translateX(0px);
+  transform: translateX(0px) !important;
 }
 
-.saveColor, .closeColorPicker, .deselectTag {
+.saveColor, .closeColorPicker, .deselectTag, .randomizeColors, .addTodo {
   background-color: white;
   border: 1px solid grey;
   border-radius: 5px;
@@ -336,10 +340,20 @@ input {
   box-shadow: 2px 2px 4px rgba(128, 128, 128, 0.2);
   transition: background-color 0.2s ease;
   font-size: 1em;
+  margin: 5px;
 }
 
-.closeColorPicker:hover, .saveColor:hover {
-  background-color: rgb(211, 211, 211);
+.addTodo {
+  margin: 0;
+  white-space: nowrap;
+}
+
+.deselectTag {
+  margin-top: 40px;
+}
+
+.closeColorPicker:hover, .saveColor:hover, .deselectTag:hover, .randomizeColors:hover, .addTodo:hover {
+  background-color: rgb(232, 232, 232);
 }
 
 .color-picker-tags {
@@ -357,8 +371,7 @@ input {
 }
 
 .color-picker-tag.selected {
-  border: 2px solid blue;
-  transform: scale(1.1);
+  box-shadow: 4px 4px 8px rgba(128, 128, 128, 0.5);
 }
 
 @media (max-width: 500px) {
