--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body {
 
 .home h1 {
   font-size: 2.5em;
+  line-height: 1em;
   margin: 5px;
 }
 
@@ -66,8 +67,7 @@ input, select {
 
 .boards {
   display: flex;
-  min-height: 80vh;
-  overflow-x: scroll;
+  min-height: calc(100vh - 100px);
 }
 
 .droppableContainer {
@@ -181,7 +181,7 @@ input, select {
 }
 
 .todoName {
-  margin: 1.33em 5px 8px 5px;
+  margin: 10px 40px 4px 40px;
   word-break: break-word;
 }
 
@@ -208,7 +208,7 @@ input, select {
   transition: background-color 0.2s ease;
 }
 
-.deleteAll {
+.deleteAll, .presetBtn {
   background-color: var(--background);
   color: var(--textColor);
   border: 1px solid var(--borderColor);
@@ -234,7 +234,7 @@ input, select {
   transition: background-color 0.2s ease;
 }
 
-.openColorPicker:hover, .themeSwitcher:hover {
+.openColorPicker:hover, .themeSwitcher:hover, .presetBtn:hover {
   background-color: var(--evenMoreOffBackground);
 }
 
@@ -366,6 +366,7 @@ input, select {
   height: 100vh;
   max-width: 100vw;
   z-index: 3;
+  transform: translateX(200vw);
 
   transition: transform 0.4s ease;
 }
@@ -467,13 +468,17 @@ input, select {
   gap: 5px;
 }
 
+.navbarRight select {
+  width: 10em;
+}
+
 .checkmark {
   background: transparent;
   border: none;
 
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: 0;
+  left: 0;
   cursor: pointer;
 }
 
@@ -593,5 +598,11 @@ input, select {
 
   .trash {
     width: 100%;
+  }
+
+  .adderContent {
+    width: 90vw;
+    max-width: 90vw;
+    min-width: 90vw;
   }
 }
