--- a/src/App.css
+++ b/src/App.css
@@ -646,6 +646,7 @@ input, select {
   .navbarOpener {
     border: none;
     background-color: transparent;
+    color: var(--textColor);
     cursor: pointer;
     font-size: 1.2em;
     transform: rotate(0deg);
