--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,12 @@
 }
 
 .dark-theme {
-	--background: rgb(29, 29, 29);
+	--background: rgb(21, 21, 21);
 	--textColor: white;
 	--borderColor: lightGrey;
-	--offBackground: rgb(48, 48, 48);
+	--offBackground: rgb(32, 32, 32);
 	--evenMoreOffBackground: rgb(129, 129, 129);
-	--overDroppable: rgb(42, 43, 51);
+	--overDroppable: rgb(30, 30, 40);
 }
 
 body {
@@ -77,6 +77,11 @@ option {
 .boards {
 	display: flex;
 	min-height: calc(100vh - 50px);
+
+	&.empty {
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 .droppableContainer {
@@ -190,8 +195,8 @@ option {
 }
 
 .todoNameAdderInput {
-	margin: 10px 40px 4px 40px;
 	word-break: break-word;
+	margin: 0;
 }
 
 .dueDateAndTime {
@@ -524,21 +529,20 @@ option {
 	max-width: 40vw;
 }
 
-.adderBtn h1 {
-	font-size: 2em;
-	filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.3));
-	color: var(--textColor);
-	line-height: 0.85em;
-	margin: 0;
-}
-
 .adderBtn {
+	font-size: 2em;
+	color: var(--textColor);
+	background-color: var(--background);
+	border-radius: 0.1em;
+	line-height: 0.85em;
+	border: none;
+	margin: 0;
 	cursor: pointer;
 	z-index: 2;
-	height: 2em;
-	width: 2em;
-	line-height: 1em;
 	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .adderDateAndTime {
@@ -562,6 +566,10 @@ option {
 	font-size: 1.2em;
 	border: none;
 	box-sizing: border-box;
+}
+
+.adderAddTodo > * {
+	text-align: unset;
 }
 
 .adderAddTodo > div {
