--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,10 @@ option {
 	height: 100%;
 }
 
+.addBoard.empty {
+	padding-bottom: 0.5em;
+}
+
 .addBoard button {
 	border: none;
 	border-radius: 5px;
@@ -383,7 +387,7 @@ option {
 	right: 0px;
 	height: 100vh;
 	max-width: 100vw;
-	z-index: 3;
+	z-index: 20;
 	transform: translateX(200vw);
 
 	transition: transform 0.4s ease;
@@ -526,6 +530,7 @@ option {
 	z-index: 2;
 	min-width: 22em;
 	max-width: 40vw;
+	z-index: 20;
 }
 
 .adderBtn {
